--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Chengze Li - Academic Homepage</title><link rel="stylesheet" href="styles.css"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"></head><body><div class="container"><aside class="sidebar"><div class="profile-section"><img src="images/profile.jpg" alt="Chengze Li" class="profile-photo"><h1>Chengze Li</h1><p class="title">PhD Student in Computer Science</p><p class="affiliation">University of Illinois at Chicago</p><div class="contact-info"><p><strong>Email:</strong> your.email@university.edu</p><p><strong>Office:</strong> Room 123, CS Building</p><p><strong>Location:</strong> Chicago, IL</p></div><div class="academic-links"><a href="#" class="link">Google Scholar</a><a href="#" class="link">CV</a><a href="#" class="link">GitHub</a><a href="#" class="link">LinkedIn</a></div></div></aside><main class="main-content"><section id="about"><h2>About</h2><p>My primary research interests lie in the interdisciplinary field of applied mathematics, computational mathematics, and artificial intelligence. I am passionate about developing algorithmic optimizations, mathematical modeling, and model applications grounded in mathematical theory.</p></section><section id="education"><h2>Education</h2><div class="education-item"><h3>PhD in Computer Science</h3><p>University of Illinois at Chicago, 2025.8-Present</p></div><div class="education-item"><h3>MS in Applied Mathematics</h3><p>Columbia University, 2023.9-2025.5</p></div><div class="education-item"><h3>BS in Mathematics</h3><p>University of North Carolina at Wilmington, 2019.9-2023.5</p></div><div class="education-item"><h3>BS in Mathematics & Applied Mathematics</h3><p>Chongqing University of Arts and Sciences, 2019.9-2023.6</p></div></section><section id="interests"><h2>Research Interests</h2><ul><li>Medical Large Language Models Development</li><li>Computer Vision</li><li>Deep Learning Architecture Design</li><li>Numerical Analysis</li><li>Optimization</li></ul></section><section id="publications"><h2>Publications</h2><div class="publication"><h3>NodeRAG: Structuring Graph-based RAG with Heterogeneous Nodes</h3><p>Tianyang Xu, Haojie Zheng, <strong>Chengze Li</strong>, Haoxiang Chen, Yixin Liu, Ruoxi Chen, Lichao Sun (2025).</p><p><em>Submitted to EMNLP 2025</em></p><div class="paper-links"><a href="#">PDF</a> | <a href="#">Code</a></div></div><div class="publication"><h3>Patient-specific Daily Updated Deep Learning Auto-Segmentation for MRI-Guided Adaptive Radiotherapy</h3><p><strong>Chengze Li</strong>, Coauthor Name, Another Author, Senior Author (2024).</p><p><em>Radiotherapy and Oncology</em></p><div class="paper-links"><a href="#">PDF</a></div></div></section><section id="news"><h2>News</h2><div class="news-item"><span class="date">Dec 2024</span><span class="news-text">Paper accepted to <strong>EMNLP 2025</strong>! Looking forward to presenting our work on multimodal learning.</span></div><div class="news-item"><span class="date">Nov 2024</span><span class="news-text">Awarded the <strong>Graduate Research Fellowship</strong> for outstanding research in AI.</span></div><div class="news-item"><span class="date">Oct 2024</span><span class="news-text">Gave an invited talk at <strong>Workshop Name</strong> on "The Future of Multimodal AI".</span></div></section></main></div></body></html>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Chengze Li | Academic Homepage</title>
+  <link href="styles.css" rel="stylesheet">
+  <!-- FontAwesome for icons -->
+  <script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
+</head>
+<body>
+
+  <div class="container">
+    <!-- 左侧侧边栏 -->
+    <aside class="sidebar">
+      <div class="profile">
+        <img src="images/profile.jpg" alt="Chengze Li" class="avatar">
+        <h1>Chengze Li</h1>
+        <p class="sub">Ph.D. Student in Applied Mathematics</p>
+        <p class="sub">Columbia University</p>
+      </div>
+      <nav class="social">
+        <a href="https://scholar.google.com/…" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+        <a href="mailto:your.email@domain.com"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/…" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
+      </nav>
+    </aside>
+
+    <!-- 右侧主内容 -->
+    <main class="main-content">
+      <!-- 自我简介 -->
+      <section id="about">
+        <h2>About Me</h2>
+        <p>
+          我目前是哥伦比亚大学应用数学硕士/博士在读，
+          研究方向包括医学影像处理、数值方法与仿真、数学建模以及深度学习与优化方法。
+          热衷于将数学理论与机器学习技术结合，解决放疗与医学图像中的实际问题。
+        </p>
+      </section>
+
+      <!-- 研究兴趣 -->
+      <section id="interests">
+        <h2>Research Interests</h2>
+        <ul>
+          <li>Medical Image Processing</li>
+          <li>Numerical Methods & Simulation</li>
+          <li>Mathematical Modeling</li>
+          <li>Machine Learning & Optimization</li>
+        </ul>
+      </section>
+
+      <!-- Publications -->
+      <section id="publications">
+        <h2>Publications</h2>
+
+        <!-- Publication Card 示例 -->
+        <div class="pub-card">
+          <div class="pub-image">
+            <img src="images/research-featured.png" alt="Auto-Segmentation Paper">
+          </div>
+          <div class="pub-info">
+            <h3>Patient-specific Daily Updated Deep Learning Auto-Segmentation for MRI-Guided Adaptive Radiotherapy</h3>
+            <p class="authors">
+              Zhenjiang Li, Wei Zhang, Baosheng Li, Jian Zhu, Yinglin Peng, <strong>Chengze Li</strong>, … 
+            </p>
+            <p class="venue">Radiotherapy and Oncology, Dec. 2022</p>
+            <div class="links">
+              <a href="files/CV.pdf" target="_blank"><i class="fas fa-file-pdf"></i> PDF</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- 如果有多篇，复制上面 .pub-card 结构即可 -->
+      </section>
+    </main>
+  </div>
+
+</body>
+</html>
