--- a/index.html
+++ b/index.html
@@ -1,80 +1,92 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Chengze Li | Academic Homepage</title>
-  <link href="styles.css" rel="stylesheet">
-  <!-- FontAwesome for icons -->
-  <script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
-</head>
-<body>
-
-  <div class="container">
-    <!-- 左侧侧边栏 -->
-    <aside class="sidebar">
-      <div class="profile">
-        <img src="images/profile.jpg" alt="Chengze Li" class="avatar">
-        <h1>Chengze Li</h1>
-        <p class="sub">Ph.D. Student in Applied Mathematics</p>
-        <p class="sub">Columbia University</p>
-      </div>
-      <nav class="social">
-        <a href="https://scholar.google.com/…" target="_blank"><i class="fas fa-graduation-cap"></i></a>
-        <a href="mailto:your.email@domain.com"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/…" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
-      </nav>
-    </aside>
-
-    <!-- 右侧主内容 -->
-    <main class="main-content">
-      <!-- 自我简介 -->
-      <section id="about">
-        <h2>About Me</h2>
-        <p>
-          我目前是哥伦比亚大学应用数学硕士/博士在读，
-          研究方向包括医学影像处理、数值方法与仿真、数学建模以及深度学习与优化方法。
-          热衷于将数学理论与机器学习技术结合，解决放疗与医学图像中的实际问题。
-        </p>
-      </section>
-
-      <!-- 研究兴趣 -->
-      <section id="interests">
-        <h2>Research Interests</h2>
-        <ul>
-          <li>Medical Image Processing</li>
-          <li>Numerical Methods & Simulation</li>
-          <li>Mathematical Modeling</li>
-          <li>Machine Learning & Optimization</li>
-        </ul>
-      </section>
-
-      <!-- Publications -->
-      <section id="publications">
-        <h2>Publications</h2>
-
-        <!-- Publication Card 示例 -->
-        <div class="pub-card">
-          <div class="pub-image">
-            <img src="images/research-featured.png" alt="Auto-Segmentation Paper">
-          </div>
-          <div class="pub-info">
-            <h3>Patient-specific Daily Updated Deep Learning Auto-Segmentation for MRI-Guided Adaptive Radiotherapy</h3>
-            <p class="authors">
-              Zhenjiang Li, Wei Zhang, Baosheng Li, Jian Zhu, Yinglin Peng, <strong>Chengze Li</strong>, … 
-            </p>
-            <p class="venue">Radiotherapy and Oncology, Dec. 2022</p>
-            <div class="links">
-              <a href="files/CV.pdf" target="_blank"><i class="fas fa-file-pdf"></i> PDF</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- 如果有多篇，复制上面 .pub-card 结构即可 -->
-      </section>
-    </main>
-  </div>
-
-</body>
-</html>
+--- index.html
++++ index.html
+@@ <!-- 左侧侧边栏 -->
+       <div class="profile">
+         <img src="images/profile.jpg" alt="Chengze Li" class="avatar">
+         <h1>Chengze Li</h1>
+-        <p class="sub">Ph.D. Student in Applied Mathematics</p>
+-        <p class="sub">Columbia University</p>
++        <p class="sub">Ph.D. Student in Applied Mathematics</p>
++        <p class="sub">Columbia University</p>
++
++        <!-- —— Social Links —— -->
++        <nav class="social-links">
++          <a href="https://scholar.google.com/…" target="_blank" title="Google Scholar">
++            <i class="fas fa-graduation-cap"></i>
++          </a>
++          <a href="mailto:your.email@domain.com" title="Email">
++            <i class="fas fa-envelope"></i>
++          </a>
++          <a href="https://www.linkedin.com/in/…" target="_blank" title="LinkedIn">
++            <i class="fab fa-linkedin"></i>
++          </a>
++          <a href="https://github.com/yourusername" target="_blank" title="GitHub">
++            <i class="fab fa-github"></i>
++          </a>
++        </nav>
+       </div>
+@@ <!-- 自我简介 -->
+       <section id="about">
+         <h2>About Me</h2>
+         <p>
+@@
+       </section>
++
++      <!-- —— News —— -->
++      <section id="news">
++        <h2>News</h2>
++        <ul>
++          <li>2025-06-10: Awarded Best Poster at ICML Workshop.</li>
++          <li>2025-05-20: Invited talk on medical AI at NeurIPS.</li>
++          <li>2025-04-15: Paper accepted to Nature Medicine.</li>
++          <li>2025-03-30: Joined Columbia University as a Ph.D. student.</li>
++          <li>2025-02-12: Released open-source toolkit for CT segmentation.</li>
++          <li>2025-01-25: Interviewed by “AI in Healthcare” magazine.</li>
++        </ul>
++      </section>
++
+       <!-- 研究兴趣 -->
+       <section id="interests">
+         <h2>Research Interests</h2>
+@@ <!-- Publications -->
+       <section id="publications">
+         <h2>Publications</h2>
+@@
+-        <!-- Publication Card 示例 -->
++        <!-- Publication Card 示例（两个完整实例） -->
+         <div class="pub-card">
+           <div class="pub-image">
+-            <img src="images/research-featured.png" alt="Auto-Segmentation Paper">
++            <img src="images/research-featured.png" alt="Auto-Segmentation Paper">
+           </div>
+           <div class="pub-info">
+             <h3>Patient-Specific Daily Updated Deep Learning Auto-Segmentation</h3>
+             <p class="authors">
+               Z. Li, W. Zhang, B. Li, J. Zhu, Y. Peng, <strong>C. Li</strong>, et al.
+             </p>
+             <p class="venue">Radiotherapy and Oncology, Dec. 2022</p>
+             <div class="links">
+               <a href="files/AutoSegmentation.pdf" target="_blank">
+                 <i class="fas fa-file-pdf"></i> PDF
+               </a>
+             </div>
+           </div>
+         </div>
++
++        <div class="pub-card">
++          <div class="pub-image">
++            <img src="images/biomedgpt.png" alt="Biomedical GPT">
++          </div>
++          <div class="pub-info">
++            <h3>BiomedGPT: A Generalist Vision-Language Model for Biomedical Tasks</h3>
++            <p class="authors">
++              K. Zhang, Y. Ding, H. Wang, X. Chen, L. Sun, <strong>C. Li</strong>, et al.
++            </p>
++            <p class="venue">Nature Medicine, Jul. 2024</p>
++            <div class="links">
++              <a href="files/BiomedGPT.pdf" target="_blank">
++                <i class="fas fa-file-pdf"></i> PDF
++              </a>
++            </div>
++          </div>
++        </div>
