--- a/index.html
+++ b/index.html
@@ -1,92 +1,130 @@
---- index.html
-+++ index.html
-@@ <!-- 左侧侧边栏 -->
-       <div class="profile">
-         <img src="images/profile.jpg" alt="Chengze Li" class="avatar">
-         <h1>Chengze Li</h1>
--        <p class="sub">Ph.D. Student in Applied Mathematics</p>
--        <p class="sub">Columbia University</p>
-+        <p class="sub">Ph.D. Student in Applied Mathematics</p>
-+        <p class="sub">Columbia University</p>
-+
-+        <!-- —— Social Links —— -->
-+        <nav class="social-links">
-+          <a href="https://scholar.google.com/…" target="_blank" title="Google Scholar">
-+            <i class="fas fa-graduation-cap"></i>
-+          </a>
-+          <a href="mailto:your.email@domain.com" title="Email">
-+            <i class="fas fa-envelope"></i>
-+          </a>
-+          <a href="https://www.linkedin.com/in/…" target="_blank" title="LinkedIn">
-+            <i class="fab fa-linkedin"></i>
-+          </a>
-+          <a href="https://github.com/yourusername" target="_blank" title="GitHub">
-+            <i class="fab fa-github"></i>
-+          </a>
-+        </nav>
-       </div>
-@@ <!-- 自我简介 -->
-       <section id="about">
-         <h2>About Me</h2>
-         <p>
-@@
-       </section>
-+
-+      <!-- —— News —— -->
-+      <section id="news">
-+        <h2>News</h2>
-+        <ul>
-+          <li>2025-06-10: Awarded Best Poster at ICML Workshop.</li>
-+          <li>2025-05-20: Invited talk on medical AI at NeurIPS.</li>
-+          <li>2025-04-15: Paper accepted to Nature Medicine.</li>
-+          <li>2025-03-30: Joined Columbia University as a Ph.D. student.</li>
-+          <li>2025-02-12: Released open-source toolkit for CT segmentation.</li>
-+          <li>2025-01-25: Interviewed by “AI in Healthcare” magazine.</li>
-+        </ul>
-+      </section>
-+
-       <!-- 研究兴趣 -->
-       <section id="interests">
-         <h2>Research Interests</h2>
-@@ <!-- Publications -->
-       <section id="publications">
-         <h2>Publications</h2>
-@@
--        <!-- Publication Card 示例 -->
-+        <!-- Publication Card 示例（两个完整实例） -->
-         <div class="pub-card">
-           <div class="pub-image">
--            <img src="images/research-featured.png" alt="Auto-Segmentation Paper">
-+            <img src="images/research-featured.png" alt="Auto-Segmentation Paper">
-           </div>
-           <div class="pub-info">
-             <h3>Patient-Specific Daily Updated Deep Learning Auto-Segmentation</h3>
-             <p class="authors">
-               Z. Li, W. Zhang, B. Li, J. Zhu, Y. Peng, <strong>C. Li</strong>, et al.
-             </p>
-             <p class="venue">Radiotherapy and Oncology, Dec. 2022</p>
-             <div class="links">
-               <a href="files/AutoSegmentation.pdf" target="_blank">
-                 <i class="fas fa-file-pdf"></i> PDF
-               </a>
-             </div>
-           </div>
-         </div>
-+
-+        <div class="pub-card">
-+          <div class="pub-image">
-+            <img src="images/biomedgpt.png" alt="Biomedical GPT">
-+          </div>
-+          <div class="pub-info">
-+            <h3>BiomedGPT: A Generalist Vision-Language Model for Biomedical Tasks</h3>
-+            <p class="authors">
-+              K. Zhang, Y. Ding, H. Wang, X. Chen, L. Sun, <strong>C. Li</strong>, et al.
-+            </p>
-+            <p class="venue">Nature Medicine, Jul. 2024</p>
-+            <div class="links">
-+              <a href="files/BiomedGPT.pdf" target="_blank">
-+                <i class="fas fa-file-pdf"></i> PDF
-+              </a>
-+            </div>
-+          </div>
-+        </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Chengze Li | Academic Homepage</title>
+
+  <!-- Main stylesheet -->
+  <link rel="stylesheet" href="styles.css">
+
+  <!-- Font Awesome 6 free for icons -->
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        integrity="sha512-1oFvYF0yv8vnbfXq/2jMYYUuwISxzstVWjEOPiu2j0n/Kyq4PHfKjNmI3Bz5WUuDblRk2M7sRrLy4aHk2z8+g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+  <div class="container">
+
+    <!-- ─────────── Sidebar ─────────── -->
+    <aside class="sidebar">
+      <div class="profile">
+        <img src="images/profile.jpg" alt="Chengze Li" class="avatar">
+        <h1>Chengze Li</h1>
+        <p class="sub">Ph.D. Student in Applied Mathematics</p>
+        <p class="sub">Columbia University</p>
+
+        <!-- Social icon row -->
+        <nav class="social-links">
+          <a href="https://scholar.google.com/citations?user=YOUR_ID"  target="_blank"
+             title="Google Scholar"><i class="fa-solid fa-graduation-cap"></i></a>
+          <a href="mailto:you@columbia.edu" title="E-mail">
+             <i class="fa-solid fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank"
+             title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/cl4460" target="_blank"
+             title="GitHub"><i class="fa-brands fa-github"></i></a>
+        </nav>
+      </div>
+    </aside>
+
+    <!-- ─────────── Main content ─────────── -->
+    <main class="main-content">
+
+      <!-- About -->
+      <section id="about">
+        <h2>About Me</h2>
+        <p>
+          I am currently a Ph.D. student in Applied Mathematics at Columbia University.
+          My research interests span medical image processing, numerical simulation,
+          mathematical modelling, and deep-learning-based optimisation methods.
+          I enjoy combining rigorous mathematical theory with modern machine-learning
+          techniques to tackle practical problems in radiation oncology and
+          medical imaging.
+        </p>
+      </section>
+
+      <!-- News -->
+      <section id="news">
+        <h2>News</h2>
+        <ul>
+          <li>2025-06-10 — Awarded Best Poster at ICML Workshop.</li>
+          <li>2025-05-20 — Invited talk on medical-AI at NeurIPS.</li>
+          <li>2025-04-15 — Paper accepted by <em>Nature Medicine</em>.</li>
+          <li>2025-03-30 — Joined Columbia University as a Ph.D. student.</li>
+          <li>2025-02-12 — Released open-source CT-segmentation toolkit.</li>
+          <li>2025-01-25 — Interviewed by <em>AI in Healthcare</em> magazine.</li>
+        </ul>
+      </section>
+
+      <!-- Research Interests -->
+      <section id="interests">
+        <h2>Research Interests</h2>
+        <ul>
+          <li>Medical Image Processing</li>
+          <li>Numerical Methods & Simulation</li>
+          <li>Mathematical Modelling</li>
+          <li>Machine Learning & Optimisation</li>
+        </ul>
+      </section>
+
+      <!-- Publications -->
+      <section id="publications">
+        <h2>Publications</h2>
+
+        <!-- Publication 1 -->
+        <div class="pub-card">
+          <div class="pub-image">
+            <img src="images/research-featured.png" alt="Auto-Segmentation paper">
+          </div>
+          <div class="pub-info">
+            <h3>Patient-specific Daily Updated Deep-Learning Auto-Segmentation for
+                MRI-Guided Adaptive Radiotherapy</h3>
+            <p class="authors">
+              Zhenjiang Li, Wei Zhang, Baosheng Li, Jian Zhu, Yinglin Peng,
+              <strong>Chengze Li</strong>, …
+            </p>
+            <p class="venue">Radiotherapy and Oncology, Dec 2022</p>
+            <div class="links">
+              <a href="files/AutoSegmentation.pdf" target="_blank">
+                 <i class="fa-solid fa-file-pdf"></i> PDF</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Publication 2 -->
+        <div class="pub-card">
+          <div class="pub-image">
+            <img src="images/biomedgpt.png" alt="BiomedGPT">
+          </div>
+          <div class="pub-info">
+            <h3>BiomedGPT: A Generalist Vision-Language Model for Diverse Biomedical Tasks</h3>
+            <p class="authors">
+              Kai Zhang, Yuting Dai, Hongyi Wang, Eric Xing, Xun Chen,
+              <strong>Chengze Li</strong>, et al.
+            </p>
+            <p class="venue">Nature Medicine, Jul 2024</p>
+            <div class="links">
+              <a href="files/BiomedGPT.pdf" target="_blank">
+                 <i class="fa-solid fa-file-pdf"></i> PDF</a>
+            </div>
+          </div>
+        </div>
+
+      </section>
+    </main>
+  </div>
+</body>
+</html>
