--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chengze Li | Academic Homepage</title>
 
-  <!-- Main stylesheet -->
+  <!-- 主样式表 -->
   <link rel="stylesheet" href="styles.css">
 
-  <!-- Font Awesome 6 free for icons -->
+  <!-- Font Awesome 6 免费图标 -->
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         integrity="sha512-1oFvYF0yv8vnbfXq/2jMYYUuwISxzstVWjEOPiu2j0n/Kyq4PHfKjNmI3Bz5WUuDblRk2M7sRrLy4aHk2z8+g=="
@@ -18,7 +18,7 @@
 <body>
   <div class="container">
 
-    <!-- ─────────── Sidebar ─────────── -->
+    <!-- ───── 侧边栏 ───── -->
     <aside class="sidebar">
       <div class="profile">
         <img src="images/profile.jpg" alt="Chengze Li" class="avatar">
@@ -26,24 +26,41 @@
         <p class="sub">Ph.D. Student in Applied Mathematics</p>
         <p class="sub">Columbia University</p>
 
-        <!-- Social icon row -->
+        <!-- 图标形式的社交链接 -->
         <nav class="social-links">
-          <a href="https://scholar.google.com/citations?user=YOUR_ID"  target="_blank"
-             title="Google Scholar"><i class="fa-solid fa-graduation-cap"></i></a>
+          <a href="https://scholar.google.com/citations?user=YOUR_ID"  target="_blank" title="Google Scholar">
+            <i class="fa-solid fa-graduation-cap"></i>
+          </a>
           <a href="mailto:you@columbia.edu" title="E-mail">
-             <i class="fa-solid fa-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank"
-             title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="https://github.com/cl4460" target="_blank"
-             title="GitHub"><i class="fa-brands fa-github"></i></a>
+            <i class="fa-solid fa-envelope"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank" title="LinkedIn">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="https://github.com/cl4460" target="_blank" title="GitHub">
+            <i class="fa-brands fa-github"></i>
+          </a>
         </nav>
+
+        <!-- 纯文本形式的社交链接 -->
+        <div class="plain-links">
+          <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank">
+            Google Scholar
+          </a><br>
+          <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank">
+            LinkedIn
+          </a><br>
+          <a href="https://github.com/cl4460" target="_blank">
+            GitHub
+          </a>
+        </div>
       </div>
     </aside>
 
-    <!-- ─────────── Main content ─────────── -->
+    <!-- ───── 主内容 ───── -->
     <main class="main-content">
 
-      <!-- About -->
+      <!-- About Me -->
       <section id="about">
         <h2>About Me</h2>
         <p>
@@ -51,8 +68,7 @@
           My research interests span medical image processing, numerical simulation,
           mathematical modelling, and deep-learning-based optimisation methods.
           I enjoy combining rigorous mathematical theory with modern machine-learning
-          techniques to tackle practical problems in radiation oncology and
-          medical imaging.
+          techniques to tackle practical problems in radiation oncology and medical imaging.
         </p>
       </section>
 
@@ -90,16 +106,13 @@
             <img src="images/research-featured.png" alt="Auto-Segmentation paper">
           </div>
           <div class="pub-info">
-            <h3>Patient-specific Daily Updated Deep-Learning Auto-Segmentation for
-                MRI-Guided Adaptive Radiotherapy</h3>
+            <h3>Patient-specific Daily Updated Deep-Learning Auto-Segmentation for MRI-Guided Adaptive Radiotherapy</h3>
             <p class="authors">
-              Zhenjiang Li, Wei Zhang, Baosheng Li, Jian Zhu, Yinglin Peng,
-              <strong>Chengze Li</strong>, …
+              Zhenjiang Li, Wei Zhang, Baosheng Li, Jian Zhu, Yinglin Peng, <strong>Chengze Li</strong>, …
             </p>
             <p class="venue">Radiotherapy and Oncology, Dec 2022</p>
             <div class="links">
-              <a href="files/AutoSegmentation.pdf" target="_blank">
-                 <i class="fa-solid fa-file-pdf"></i> PDF</a>
+              <a href="files/AutoSegmentation.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i> PDF</a>
             </div>
           </div>
         </div>
@@ -112,13 +125,11 @@
           <div class="pub-info">
             <h3>BiomedGPT: A Generalist Vision-Language Model for Diverse Biomedical Tasks</h3>
             <p class="authors">
-              Kai Zhang, Yuting Dai, Hongyi Wang, Eric Xing, Xun Chen,
-              <strong>Chengze Li</strong>, et al.
+              Kai Zhang, Yuting Dai, Hongyi Wang, Eric Xing, Xun Chen, <strong>Chengze Li</strong>, et al.
             </p>
             <p class="venue">Nature Medicine, Jul 2024</p>
             <div class="links">
-              <a href="files/BiomedGPT.pdf" target="_blank">
-                 <i class="fa-solid fa-file-pdf"></i> PDF</a>
+              <a href="files/BiomedGPT.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i> PDF</a>
             </div>
           </div>
         </div>
