--- a/index.html
+++ b/index.html
@@ -5,20 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chengze Li | Academic Homepage</title>
 
-  <!-- 主样式表 -->
   <link rel="stylesheet" href="styles.css">
-
-  <!-- Font Awesome 6 免费图标 -->
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         integrity="sha512-1oFvYF0yv8vnbfXq/2jMYYUuwISxzstVWjEOPiu2j0n/Kyq4PHfKjNmI3Bz5WUuDblRk2M7sRrLy4aHk2z8+g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
-
 <body>
   <div class="container">
 
-    <!-- ───── 侧边栏 ───── -->
+    <!-- ───── Sidebar ───── -->
     <aside class="sidebar">
       <div class="profile">
         <img src="images/profile.jpg" alt="Chengze Li" class="avatar">
@@ -26,116 +22,104 @@
         <p class="sub">Ph.D. Student in Applied Mathematics</p>
         <p class="sub">Columbia University</p>
 
-        <!-- 图标形式的社交链接 -->
+        <!-- icon row -->
         <nav class="social-links">
-          <a href="https://scholar.google.com/citations?user=YOUR_ID"  target="_blank" title="Google Scholar">
-            <i class="fa-solid fa-graduation-cap"></i>
-          </a>
-          <a href="mailto:you@columbia.edu" title="E-mail">
-            <i class="fa-solid fa-envelope"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank" title="LinkedIn">
-            <i class="fa-brands fa-linkedin"></i>
-          </a>
-          <a href="https://github.com/cl4460" target="_blank" title="GitHub">
-            <i class="fa-brands fa-github"></i>
-          </a>
+          <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank" title="Google Scholar"><i class="fa-solid fa-graduation-cap"></i></a>
+          <a href="mailto:you@columbia.edu" title="E-mail"><i class="fa-solid fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/cl4460" target="_blank" title="GitHub"><i class="fa-brands fa-github"></i></a>
         </nav>
 
-        <!-- 纯文本形式的社交链接 -->
+        <!-- plain text links -->
         <div class="plain-links">
-          <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank">
-            Google Scholar
-          </a><br>
-          <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank">
-            LinkedIn
-          </a><br>
-          <a href="https://github.com/cl4460" target="_blank">
-            GitHub
-          </a>
+          <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank">Google Scholar</a><br>
+          <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank">LinkedIn</a><br>
+          <a href="https://github.com/cl4460" target="_blank">GitHub</a>
         </div>
       </div>
     </aside>
 
-    <!-- ───── 主内容 ───── -->
+    <!-- ───── Main content ───── -->
     <main class="main-content">
+      <div class="main-content-inner"><!-- 半透明白底包裹 -->
 
-      <!-- About Me -->
-      <section id="about">
-        <h2>About Me</h2>
-        <p>
-          I am currently a Ph.D. student in Applied Mathematics at Columbia University.
-          My research interests span medical image processing, numerical simulation,
-          mathematical modelling, and deep-learning-based optimisation methods.
-          I enjoy combining rigorous mathematical theory with modern machine-learning
-          techniques to tackle practical problems in radiation oncology and medical imaging.
-        </p>
-      </section>
+        <!-- About -->
+        <section id="about">
+          <h2>About Me</h2>
+          <p>
+            I am currently a Ph.D. student in Applied Mathematics at Columbia University.
+            My research interests span medical image processing, numerical simulation,
+            mathematical modelling, and deep-learning-based optimisation methods. I enjoy
+            combining rigorous mathematical theory with modern machine-learning techniques
+            to tackle practical problems in radiation oncology and medical imaging.
+          </p>
+        </section>
 
-      <!-- News -->
-      <section id="news">
-        <h2>News</h2>
-        <ul>
-          <li>2025-06-10 — Awarded Best Poster at ICML Workshop.</li>
-          <li>2025-05-20 — Invited talk on medical-AI at NeurIPS.</li>
-          <li>2025-04-15 — Paper accepted by <em>Nature Medicine</em>.</li>
-          <li>2025-03-30 — Joined Columbia University as a Ph.D. student.</li>
-          <li>2025-02-12 — Released open-source CT-segmentation toolkit.</li>
-          <li>2025-01-25 — Interviewed by <em>AI in Healthcare</em> magazine.</li>
-        </ul>
-      </section>
+        <!-- News -->
+        <section id="news">
+          <h2>News</h2>
+          <ul>
+            <li>2025-06-10 — Awarded Best Poster at ICML Workshop.</li>
+            <li>2025-05-20 — Invited talk on medical-AI at NeurIPS.</li>
+            <li>2025-04-15 — Paper accepted by <em>Nature Medicine</em>.</li>
+            <li>2025-03-30 — Joined Columbia University as a Ph.D. student.</li>
+            <li>2025-02-12 — Released open-source CT-segmentation toolkit.</li>
+            <li>2025-01-25 — Interviewed by <em>AI in Healthcare</em> magazine.</li>
+          </ul>
+        </section>
 
-      <!-- Research Interests -->
-      <section id="interests">
-        <h2>Research Interests</h2>
-        <ul>
-          <li>Medical Image Processing</li>
-          <li>Numerical Methods & Simulation</li>
-          <li>Mathematical Modelling</li>
-          <li>Machine Learning & Optimisation</li>
-        </ul>
-      </section>
+        <!-- Research Interests -->
+        <section id="interests">
+          <h2>Research Interests</h2>
+          <ul>
+            <li>Medical Image Processing</li>
+            <li>Numerical Methods & Simulation</li>
+            <li>Mathematical Modelling</li>
+            <li>Machine Learning & Optimisation</li>
+          </ul>
+        </section>
 
-      <!-- Publications -->
-      <section id="publications">
-        <h2>Publications</h2>
+        <!-- Publications -->
+        <section id="publications">
+          <h2>Publications</h2>
 
-        <!-- Publication 1 -->
-        <div class="pub-card">
-          <div class="pub-image">
-            <img src="images/research-featured.png" alt="Auto-Segmentation paper">
-          </div>
-          <div class="pub-info">
-            <h3>Patient-specific Daily Updated Deep-Learning Auto-Segmentation for MRI-Guided Adaptive Radiotherapy</h3>
-            <p class="authors">
-              Zhenjiang Li, Wei Zhang, Baosheng Li, Jian Zhu, Yinglin Peng, <strong>Chengze Li</strong>, …
-            </p>
-            <p class="venue">Radiotherapy and Oncology, Dec 2022</p>
-            <div class="links">
-              <a href="files/AutoSegmentation.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i> PDF</a>
+          <!-- Publication 1 -->
+          <div class="pub-card">
+            <div class="pub-image">
+              <img src="images/research-featured.png" alt="Auto-Segmentation paper">
+            </div>
+            <div class="pub-info">
+              <h3>Patient-specific Daily Updated Deep-Learning Auto-Segmentation for MRI-Guided Adaptive Radiotherapy</h3>
+              <p class="authors">
+                Zhenjiang Li, Wei Zhang, Baosheng Li, Jian Zhu, Yinglin Peng, <strong>Chengze Li</strong>, …
+              </p>
+              <p class="venue">Radiotherapy and Oncology, Dec 2022</p>
+              <div class="links">
+                <a href="files/AutoSegmentation.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i> PDF</a>
+              </div>
             </div>
           </div>
-        </div>
 
-        <!-- Publication 2 -->
-        <div class="pub-card">
-          <div class="pub-image">
-            <img src="images/biomedgpt.png" alt="BiomedGPT">
-          </div>
-          <div class="pub-info">
-            <h3>BiomedGPT: A Generalist Vision-Language Model for Diverse Biomedical Tasks</h3>
-            <p class="authors">
-              Kai Zhang, Yuting Dai, Hongyi Wang, Eric Xing, Xun Chen, <strong>Chengze Li</strong>, et al.
-            </p>
-            <p class="venue">Nature Medicine, Jul 2024</p>
-            <div class="links">
-              <a href="files/BiomedGPT.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i> PDF</a>
+          <!-- Publication 2 -->
+          <div class="pub-card">
+            <div class="pub-image">
+              <img src="images/biomedgpt.png" alt="BiomedGPT">
+            </div>
+            <div class="pub-info">
+              <h3>BiomedGPT: A Generalist Vision-Language Model for Diverse Biomedical Tasks</h3>
+              <p class="authors">
+                Kai Zhang, Yuting Dai, Hongyi Wang, Eric Xing, Xun Chen, <strong>Chengze Li</strong>, et al.
+              </p>
+              <p class="venue">Nature Medicine, Jul 2024</p>
+              <div class="links">
+                <a href="files/BiomedGPT.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i> PDF</a>
+              </div>
             </div>
           </div>
-        </div>
 
-      </section>
+        </section>
+      </div><!-- /main-content-inner -->
     </main>
-  </div>
+  </div><!-- /container -->
 </body>
 </html>
