--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chengze Li | Academic Homepage</title>
 
+  <!-- 主样式 -->
   <link rel="stylesheet" href="styles.css">
+
+  <!-- Font Awesome 6 Free -->
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         integrity="sha512-1oFvYF0yv8vnbfXq/2jMYYUuwISxzstVWjEOPiu2j0n/Kyq4PHfKjNmI3Bz5WUuDblRk2M7sRrLy4aHk2z8+g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
   <div class="container">
 
@@ -22,20 +26,37 @@
         <p class="sub">Ph.D. Student in Applied Mathematics</p>
         <p class="sub">Columbia University</p>
 
-        <!-- icon row -->
+        <!-- icon row（保持不变，可做 hover 效果） -->
         <nav class="social-links">
-          <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank" title="Google Scholar"><i class="fa-solid fa-graduation-cap"></i></a>
-          <a href="mailto:you@columbia.edu" title="E-mail"><i class="fa-solid fa-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="https://github.com/cl4460" target="_blank" title="GitHub"><i class="fa-brands fa-github"></i></a>
+          <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank" title="Google Scholar">
+            <i class="fa-solid fa-graduation-cap"></i>
+          </a>
+          <a href="mailto:you@columbia.edu" title="E-mail">
+            <i class="fa-solid fa-envelope"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank" title="LinkedIn">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="https://github.com/cl4460" target="_blank" title="GitHub">
+            <i class="fa-brands fa-github"></i>
+          </a>
         </nav>
 
-        <!-- plain text links -->
-        <div class="plain-links">
-          <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank">Google Scholar</a><br>
-          <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank">LinkedIn</a><br>
-          <a href="https://github.com/cl4460" target="_blank">GitHub</a>
-        </div>
+        <!-- 图标 + 文字纵向列表 -->
+        <ul class="icon-text-list">
+          <li>
+            <i class="fa-solid fa-graduation-cap"></i>
+            <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank">Google Scholar</a>
+          </li>
+          <li>
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank">LinkedIn</a>
+          </li>
+          <li>
+            <i class="fa-brands fa-github"></i>
+            <a href="https://github.com/cl4460" target="_blank">GitHub</a>
+          </li>
+        </ul>
       </div>
     </aside>
 
@@ -95,7 +116,9 @@
               </p>
               <p class="venue">Radiotherapy and Oncology, Dec 2022</p>
               <div class="links">
-                <a href="files/AutoSegmentation.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i> PDF</a>
+                <a href="files/AutoSegmentation.pdf" target="_blank">
+                  <i class="fa-solid fa-file-pdf"></i> PDF
+                </a>
               </div>
             </div>
           </div>
@@ -112,7 +135,9 @@
               </p>
               <p class="venue">Nature Medicine, Jul 2024</p>
               <div class="links">
-                <a href="files/BiomedGPT.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i> PDF</a>
+                <a href="files/BiomedGPT.pdf" target="_blank">
+                  <i class="fa-solid fa-file-pdf"></i> PDF
+                </a>
               </div>
             </div>
           </div>
