--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
       <div class="profile">
         <img src="images/profile.jpg" alt="Chengze Li" class="avatar">
         <h1>Chengze Li</h1>
-        <p class="sub">Ph.D. Student in Applied Mathematics</p>
-        <p class="sub">Columbia University</p>
+        <p class="sub">Ph.D. Student in Computer Science</p>
+        <p class="sub">University of Illinois at Chicago</p>
 
         <!-- icon row（保持不变，可做 hover 效果） -->
         <nav class="social-links">
-          <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank" title="Google Scholar">
+          <a href="https://scholar.google.com/citations?user=IcvamkoAAAAJ&hl=en" target="_blank" title="Google Scholar">
             <i class="fa-solid fa-graduation-cap"></i>
           </a>
           <a href="mailto:you@columbia.edu" title="E-mail">
             <i class="fa-solid fa-envelope"></i>
           </a>
-          <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank" title="LinkedIn">
+          <a href="www.linkedin.com/in/chengze-li-147313289" target="_blank" title="LinkedIn">
             <i class="fa-brands fa-linkedin"></i>
           </a>
           <a href="https://github.com/cl4460" target="_blank" title="GitHub">
@@ -80,12 +80,12 @@
         <section id="news">
           <h2>News</h2>
           <ul>
-            <li>2025-06-10 — Awarded Best Poster at ICML Workshop.</li>
-            <li>2025-05-20 — Invited talk on medical-AI at NeurIPS.</li>
-            <li>2025-04-15 — Paper accepted by <em>Nature Medicine</em>.</li>
-            <li>2025-03-30 — Joined Columbia University as a Ph.D. student.</li>
-            <li>2025-02-12 — Released open-source CT-segmentation toolkit.</li>
-            <li>2025-01-25 — Interviewed by <em>AI in Healthcare</em> magazine.</li>
+            <li>2025.05 — Co-authored <a href="https://arxiv.org/pdf/2504.11544" target="_blank"></a>“NodeRAG: Structuring Graph-based RAG with Heterogeneous Nodes”</a> with Tianyang Xu, under review at EMNLP 2025.</li>
+            <li>2025.04 — Admitted as a first-year Ph.D. student under the guidance of Prof. Philip Yu at the University of Illinois at Chicago, concentrating on multimodal AI systems for medical applications.</li>
+            <li>2025.03 —Serving as Research Scientist at <a href="https://www.manteiamedical.com/" target="_blank"></a>Manteia Technologies Co., Ltd.</a> in Milwaukee, WI, I applied AI and machine-learning methods to innovate at the intersection of radiation oncology and computational intelligence, with a focus on clinical decision support.</li>
+            <li>2024.11 — In collaboration with Prof. Sharon Qi of University of California, Los Angeles’s Radiation Oncology Department, co-investigating state-of-the-art convolutional and transformer-based segmentation architectures to enhance model accuracy and robustness for tumor delineation in radiotherapy planning.</li>
+            <li>2024.08 — As the research assistant at <a href="https://www.ldeo.columbia.edu/" target="_blank"></a>Lamont-Doherty Earth Observatory</a>, under Profs. Michael Tippett & Chia-Ying Lee, used PDE boundary filters, EAR5/MERRA/NeuralGCM data mining, and NLP to fine-tune TempestExtremes for global tropical cyclone and tornado forecasting.</li>
+            <li>2024.07 — Partnered with Prof. Haiying Shen in the Computer Science Department at the University of Virginia to optimize startup strategies and lookahead algorithms for LLMs key–value caching.</li>
           </ul>
         </section>
 
@@ -94,9 +94,9 @@
           <h2>Research Interests</h2>
           <ul>
             <li>Medical Image Processing</li>
-            <li>Numerical Methods & Simulation</li>
-            <li>Mathematical Modelling</li>
-            <li>Machine Learning & Optimisation</li>
+            <li>Natural Language Processing (Large Language Models)</li>
+            <li>Machine Learning</li>
+            <li>Numerical Methods & Modeling</li>
           </ul>
         </section>
 
@@ -107,7 +107,7 @@
           <!-- Publication 1 -->
           <div class="pub-card">
             <div class="pub-image">
-              <img src="images/research-featured.png" alt="Auto-Segmentation paper">
+              <img src="images/patient_specific.jpg" alt="Auto-Segmentation paper">
             </div>
             <div class="pub-info">
               <h3>Patient-specific Daily Updated Deep-Learning Auto-Segmentation for MRI-Guided Adaptive Radiotherapy</h3>
@@ -116,7 +116,7 @@
               </p>
               <p class="venue">Radiotherapy and Oncology, Dec 2022</p>
               <div class="links">
-                <a href="files/AutoSegmentation.pdf" target="_blank">
+                <a href="https://www.thegreenjournal.com/action/showPdf?pii=S0167-8140%2822%2904551-0" target="_blank">
                   <i class="fa-solid fa-file-pdf"></i> PDF
                 </a>
               </div>
@@ -126,16 +126,16 @@
           <!-- Publication 2 -->
           <div class="pub-card">
             <div class="pub-image">
-              <img src="images/biomedgpt.png" alt="BiomedGPT">
+              <img src="images/NodeRAG.png" alt="NodeRAG">
             </div>
             <div class="pub-info">
-              <h3>BiomedGPT: A Generalist Vision-Language Model for Diverse Biomedical Tasks</h3>
+              <h3>NodeRAG: Structuring Graph-based RAG with Heterogeneous Nodes</h3>
               <p class="authors">
-                Kai Zhang, Yuting Dai, Hongyi Wang, Eric Xing, Xun Chen, <strong>Chengze Li</strong>, et al.
+                Tianyang Xu, Haojie Zheng, <strong>Chengze Li</strong>, Haoxiang Chen, Yixin Liu, Ruoxi Chen, Lichao Sun
               </p>
-              <p class="venue">Nature Medicine, Jul 2024</p>
+              <p class="venue">Submitted to EMNLP 2025</p>
               <div class="links">
-                <a href="files/BiomedGPT.pdf" target="_blank">
+                <a href="https://arxiv.org/pdf/2504.11544" target="_blank">
                   <i class="fa-solid fa-file-pdf"></i> PDF
                 </a>
               </div>
