--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <!-- Publication 2 -->
           <div class="pub-card">
             <div class="pub-image">
-              <img src="images/NodeRAG.png" alt="NodeRAG">
+              <img src="images/NodeRAG.jpg" alt="NodeRAG">
             </div>
             <div class="pub-info">
               <h3>NodeRAG: Structuring Graph-based RAG with Heterogeneous Nodes</h3>
