--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="mailto:you@columbia.edu" title="E-mail">
             <i class="fa-solid fa-envelope"></i>
           </a>
-          <a href="www.linkedin.com/in/chengze-li-147313289" target="_blank" title="LinkedIn">
+          <a href="https://www.linkedin.com/in/chengze-li-147313289" target="_blank" title="LinkedIn">
             <i class="fa-brands fa-linkedin"></i>
           </a>
           <a href="https://github.com/cl4460" target="_blank" title="GitHub">
@@ -68,11 +68,8 @@
         <section id="about">
           <h2>About Me</h2>
           <p>
-            I am currently a Ph.D. student in Applied Mathematics at Columbia University.
-            My research interests span medical image processing, numerical simulation,
-            mathematical modelling, and deep-learning-based optimisation methods. I enjoy
-            combining rigorous mathematical theory with modern machine-learning techniques
-            to tackle practical problems in radiation oncology and medical imaging.
+            I am currently a PhD student in Computer Science at the University of Illinois at Chicago under the supervision of Prof. Philip Yu. I earned two bachelor’s degrees, one in Mathematics from the University of North Carolina Wilmington and one in Mathematics and Applied Mathematics from Chongqing University of Arts and Sciences. In February 2025, under the guidance of Prof. Michael Tippett, I completed a Master of Science in Applied Mathematics at Columbia University. My recent research focuses on applying deep learning and large language models to radiation oncology, and I am also passionate about AI work in numerical methods, algorithm analysis, and optimization. The greatest motivation for my doctoral studies is the chance to apply what I learn in practical settings and deliver meaningful, beneficial results.
+
           </p>
         </section>
 
@@ -80,11 +77,11 @@
         <section id="news">
           <h2>News</h2>
           <ul>
-            <li>2025.05 — Co-authored <a href="https://arxiv.org/pdf/2504.11544" target="_blank"></a>“NodeRAG: Structuring Graph-based RAG with Heterogeneous Nodes”</a> with Tianyang Xu, under review at EMNLP 2025.</li>
+            <li>2025.05 — Co-authored <a href="https://arxiv.org/pdf/2504.11544" target="_blank">“NodeRAG: Structuring Graph-based RAG with Heterogeneous Nodes”</a> with Tianyang Xu, under review at EMNLP 2025.</li>
             <li>2025.04 — Admitted as a first-year Ph.D. student under the guidance of Prof. Philip Yu at the University of Illinois at Chicago, concentrating on multimodal AI systems for medical applications.</li>
-            <li>2025.03 —Serving as Research Scientist at <a href="https://www.manteiamedical.com/" target="_blank"></a>Manteia Technologies Co., Ltd.</a> in Milwaukee, WI, I applied AI and machine-learning methods to innovate at the intersection of radiation oncology and computational intelligence, with a focus on clinical decision support.</li>
+            <li>2025.03 —Serving as Research Scientist at <a href="https://www.manteiamedical.com/" target="_blank">Manteia Technologies Co., Ltd.</a> in Milwaukee, WI, I applied AI and machine-learning methods to innovate at the intersection of radiation oncology and computational intelligence, with a focus on clinical decision support.</li>
             <li>2024.11 — In collaboration with Prof. Sharon Qi of University of California, Los Angeles’s Radiation Oncology Department, co-investigating state-of-the-art convolutional and transformer-based segmentation architectures to enhance model accuracy and robustness for tumor delineation in radiotherapy planning.</li>
-            <li>2024.08 — As the research assistant at <a href="https://www.ldeo.columbia.edu/" target="_blank"></a>Lamont-Doherty Earth Observatory</a>, under Profs. Michael Tippett & Chia-Ying Lee, used PDE boundary filters, EAR5/MERRA/NeuralGCM data mining, and NLP to fine-tune TempestExtremes for global tropical cyclone and tornado forecasting.</li>
+            <li>2024.08 — As the research assistant at <a href="https://www.ldeo.columbia.edu/" target="_blank">Lamont-Doherty Earth Observatory</a>, under Profs. Michael Tippett & Chia-Ying Lee, used PDE boundary filters, EAR5/MERRA/NeuralGCM data mining, and NLP to fine-tune TempestExtremes for global tropical cyclone and tornado forecasting.</li>
             <li>2024.07 — Partnered with Prof. Haiying Shen in the Computer Science Department at the University of Virginia to optimize startup strategies and lookahead algorithms for LLMs key–value caching.</li>
           </ul>
         </section>
@@ -126,7 +123,7 @@
           <!-- Publication 2 -->
           <div class="pub-card">
             <div class="pub-image">
-              <img src="images/NodeRAG.jpg" alt="NodeRAG">
+              <img src="images/NodeRAG.jpg" alt="NodeRAG paper">
             </div>
             <div class="pub-info">
               <h3>NodeRAG: Structuring Graph-based RAG with Heterogeneous Nodes</h3>
