--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <ul class="icon-text-list">
           <li>
             <i class="fa-solid fa-graduation-cap"></i>
-            <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank">Google Scholar</a>
+            <a href="https://scholar.google.com/citations?user=IcvamkoAAAAJ&hl=en" target="_blank">Google Scholar</a>
           </li>
           <li>
             <i class="fa-brands fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/YOUR_ID" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/chengze-li-147313289" target="_blank">LinkedIn</a>
           </li>
           <li>
             <i class="fa-brands fa-github"></i>
@@ -68,8 +68,13 @@
         <section id="about">
           <h2>About Me</h2>
           <p>
-            I am currently a PhD student in Computer Science at the University of Illinois at Chicago under the supervision of Prof. Philip Yu. I earned two bachelor’s degrees, one in Mathematics from the University of North Carolina Wilmington and one in Mathematics and Applied Mathematics from Chongqing University of Arts and Sciences. In February 2025, under the guidance of Prof. Michael Tippett, I completed a Master of Science in Applied Mathematics at Columbia University. My recent research focuses on applying deep learning and large language models to radiation oncology, and I am also passionate about AI work in numerical methods, algorithm analysis, and optimization. The greatest motivation for my doctoral studies is the chance to apply what I learn in practical settings and deliver meaningful, beneficial results.
-
+            I am currently a PhD student in Computer Science at the University of Illinois at Chicago under the supervision of Prof. Philip Yu. 
+          </p>
+          <p> 
+            I earned two bachelor’s degrees, one in Mathematics from the University of North Carolina Wilmington and one in Mathematics and Applied Mathematics from Chongqing University of Arts and Sciences. In February 2025, under the guidance of Prof. Michael Tippett, I completed a Master of Science in Applied Mathematics at Fu Foundation School of Engineering and Applied Science, Columbia University. 
+          </p>
+          <p> 
+            My recent research focuses on applying deep learning and large language models to radiation oncology, and I am also passionate about AI work in numerical methods, algorithm analysis, and optimization. The greatest motivation for my doctoral studies is the chance to apply what I learn in practical settings and deliver meaningful, beneficial results.
           </p>
         </section>
 
