--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             I am currently a PhD student in Computer Science at the University of Illinois at Chicago under the supervision of Prof. Philip Yu. 
           </p>
           <p> 
-            I earned two bachelor’s degrees, one in Mathematics from the University of North Carolina Wilmington and one in Mathematics and Applied Mathematics from Chongqing University of Arts and Sciences. In February 2025, under the guidance of Prof. Michael Tippett, I completed a Master of Science in Applied Mathematics at Fu Foundation School of Engineering and Applied Science, Columbia University. 
+            I earned two bachelor’s degrees, one in Mathematics from the <a href="https://uncw.edu/academics/colleges/cse/departments/math-statistics/?utm_source=math&utm_medium=301&utm_id=REDIR1" target="_blank">University of North Carolina Wilmington</a> and one in Mathematics and Applied Mathematics from Chongqing University of Arts and Sciences</a>. In February 2025, under the guidance of Prof. Michael Tippett, I completed a Master of Science in Applied Mathematics at <a href="https://engineering.columbia.edu/" target="_blank">Fu Foundation School of Engineering and Applied Science</a>, Columbia University. 
           </p>
           <p> 
-            My recent research focuses on applying deep learning and large language models to radiation oncology, and I am also passionate about AI work in numerical methods, algorithm analysis, and optimization. The greatest motivation for my doctoral studies is the chance to apply what I learn in practical settings and deliver meaningful, beneficial results.
+            My recent research focuses on applying deep learning and LLMs to radiation oncology, and I am also passionate about AI work grounded in numerical methods, algorithm analysis, dynamical systems, optimization, and computational mathematics. The greatest motivation for my doctoral studies is the chance to apply what I learn in practical settings and deliver meaningful, beneficial results to the real world.
           </p>
         </section>
 
@@ -86,8 +86,8 @@
             <li>2025.04 — Admitted as a first-year Ph.D. student under the guidance of Prof. Philip Yu at the University of Illinois at Chicago, concentrating on multimodal AI systems for medical applications.</li>
             <li>2025.03 —Serving as Research Scientist at <a href="https://www.manteiamedical.com/" target="_blank">Manteia Technologies Co., Ltd.</a> in Milwaukee, WI, I applied AI and machine-learning methods to innovate at the intersection of radiation oncology and computational intelligence, with a focus on clinical decision support.</li>
             <li>2024.11 — In collaboration with Prof. Sharon Qi of University of California, Los Angeles’s Radiation Oncology Department, co-investigating state-of-the-art convolutional and transformer-based segmentation architectures to enhance model accuracy and robustness for tumor delineation in radiotherapy planning.</li>
-            <li>2024.08 — As the research assistant at <a href="https://www.ldeo.columbia.edu/" target="_blank">Lamont-Doherty Earth Observatory</a>, under Profs. Michael Tippett & Chia-Ying Lee, used PDE boundary filters, EAR5/MERRA/NeuralGCM data mining, and NLP to fine-tune TempestExtremes for global tropical cyclone and tornado forecasting.</li>
-            <li>2024.07 — Partnered with Prof. Haiying Shen in the Computer Science Department at the University of Virginia to optimize startup strategies and lookahead algorithms for LLMs key–value caching.</li>
+            <li>2024.08 — As the research assistant at <a href="https://www.ldeo.columbia.edu/" target="_blank">Lamont-Doherty Earth Observatory</a>, under Profs. Michael Tippett & Chia-Ying Lee, used PDE boundary filters and EAR5/MERRA/NeuralGCM data mining to fine-tune TempestExtremes for global tropical cyclone and tornado forecasting.</li>
+            <li>2024.07 — Partnered with Prof. Haiying Shen in the Computer Science Department at the University of Virginia to optimize LRU cache replacement strategies and lookahead algorithms for LLMs key–value caching.</li>
           </ul>
         </section>
 
