--- a/index.html
+++ b/index.html
@@ -2,13 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Chengze Li | Academic Homepage</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+  <!-- ① Google Search Console — 把 VERIFY_CODE 换成你控制台给的字符串 -->
+  <meta name="google-site-verification" content="<meta name="google-site-verification" content="C_dQcFNXhjPmU06mKevyCnamId0brZMV_wgLy4jRnG8" />">
+
+  <!-- ② 核心 SEO -->
+  <title>Chengze Li – Columbia University / UIC | AI & Medical Imaging</title>
+  <meta name="description"
+        content="Chengze Li, PhD student (UIC, ex-Columbia). Research interests: radiation-oncology AI, large language models, numerical methods and optimisation.">
+
+  <!-- ③ Canonical（防重复） -->
+  <link rel="canonical" href="https://cl4460.github.io/">
+
+  <!-- ④ Open-Graph / Twitter Cards -->
+  <meta property="og:type"        content="profile">
+  <meta property="og:title"       content="Chengze Li – Columbia University / UIC">
+  <meta property="og:description" content="PhD student in Computer Science, UIC. Former Columbia MS. Research: AI for medical imaging & LLMs.">
+  <meta property="og:url"         content="https://cl4460.github.io/">
+  <meta property="og:image"       content="https://cl4460.github.io/images/profile.jpg">
+
+  <!-- ⑤ JSON-LD 结构化数据 -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Person",
+    "name":"Chengze Li",
+    "url":"https://cl4460.github.io/",
+    "affiliation":[
+      {"@type":"CollegeOrUniversity","name":"University of Illinois Chicago"},
+      {"@type":"CollegeOrUniversity","name":"Columbia University"}
+    ],
+    "sameAs":[
+      "https://scholar.google.com/citations?user=IcvamkoAAAAJ",
+      "https://www.linkedin.com/in/chengze-li-147313289",
+      "https://github.com/cl4460"
+    ]
+  }
+  </script>
+
 
   <!-- 主样式 -->
   <link rel="stylesheet" href="styles.css">
-
-  <!-- Font Awesome 6 Free -->
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         integrity="sha512-1oFvYF0yv8vnbfXq/2jMYYUuwISxzstVWjEOPiu2j0n/Kyq4PHfKjNmI3Bz5WUuDblRk2M7sRrLy4aHk2z8+g=="
