--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <!-- ① Google Search Console — 把 VERIFY_CODE 换成你控制台给的字符串 -->
-  <meta name="google-site-verification" content="<meta name="google-site-verification" content="C_dQcFNXhjPmU06mKevyCnamId0brZMV_wgLy4jRnG8" />">
+  <meta name="google-site-verification" content="C_dQcFNXhjPmU06mKevyCnamId0brZMV_wgLy4jRnG8">
 
   <!-- ② 核心 SEO -->
   <title>Chengze Li – Columbia University / UIC | AI & Medical Imaging</title>
