--- a/index.html
+++ b/index.html
@@ -91,13 +91,17 @@
             <i class="fa-brands fa-github"></i>
             <a href="https://github.com/cl4460" target="_blank">GitHub</a>
           </li>
+          <li>
+            <i class="fa-solid fa-file-lines"></i>
+            <a href="CV.pdf" target="_blank">Resume</a>
+          </li>
         </ul>
       </div>
     </aside>
 
     <!-- ───── Main content ───── -->
     <main class="main-content">
-      <div class="main-content-inner"><!-- 半透明白底包裹 -->
+      <div class="main-content-inner">
 
         <!-- About -->
         <section id="about">
