--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
         <!-- 图标 + 文字纵向列表 -->
         <ul class="icon-text-list">
           <li>
+            <i class="fa-solid fa-envelope"></i>
+            <a href="mailto:chengze6@illinois.edu" title="E-mail">Email</a>
+          </li>
+          <li>
             <i class="fa-solid fa-graduation-cap"></i>
             <a href="https://scholar.google.com/citations?user=IcvamkoAAAAJ&hl=en" target="_blank">Google Scholar</a>
           </li>
