--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <ul class="icon-text-list">
           <li>
             <i class="fa-solid fa-envelope"></i>
-            <a href="mailto:chengze6@illinois.edu" target="E-mail">Email</a>
+            <a href="chengze6@illinois.edu" target="_blank">Email</a>
           </li>
           <li>
             <i class="fa-solid fa-graduation-cap"></i>
