--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <a href="https://scholar.google.com/citations?user=IcvamkoAAAAJ&hl=en" target="_blank" title="Google Scholar">
             <i class="fa-solid fa-graduation-cap"></i>
           </a>
-          <a href="mailto:you@columbia.edu" title="E-mail">
+          <a href="mailto:chengze6@illinois.edu" title="E-mail">
             <i class="fa-solid fa-envelope"></i>
           </a>
           <a href="https://www.linkedin.com/in/chengze-li-147313289" target="_blank" title="LinkedIn">
@@ -81,7 +81,7 @@
         <ul class="icon-text-list">
           <li>
             <i class="fa-solid fa-envelope"></i>
-            <a href="chengze6@illinois.edu" target="_blank">Email</a>
+            <a href="chengze6@illinois.edu">Email</a>
           </li>
           <li>
             <i class="fa-solid fa-graduation-cap"></i>
