--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <ul class="icon-text-list">
           <li>
             <i class="fa-solid fa-envelope"></i>
-            <span>Email:chengze6@illinois.edu</span>
+            <span>Email: chengze6@uic.edu</span>
           </li>
           <li>
             <i class="fa-solid fa-graduation-cap"></i>
