--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <meta name="google-site-verification" content="C_dQcFNXhjPmU06mKevyCnamId0brZMV_wgLy4jRnG8">
 
   <!-- ② 核心 SEO -->
-  <title>Chengze Li – Columbia University / UIC | AI & Medical Imaging</title>
+  <title>Chengze Li – University of Illinois Chicago | Artificial Intelligence & Medical Imaging</title>
   <meta name="description"
-        content="Chengze Li, PhD student (UIC, ex-Columbia). Research interests: radiation-oncology AI, large language models, numerical methods and optimisation.">
+        content="Chengze Li, PhD student. Research interests: radiation-oncology AI, large language models, numerical methods and optimisation.">
 
   <!-- ③ Canonical（防重复） -->
   <link rel="canonical" href="https://cl4460.github.io/">
 
   <!-- ④ Open-Graph / Twitter Cards -->
   <meta property="og:type"        content="profile">
-  <meta property="og:title"       content="Chengze Li – Columbia University / UIC">
-  <meta property="og:description" content="PhD student in Computer Science, UIC. Former Columbia MS. Research: AI for medical imaging & LLMs.">
+  <meta property="og:title"       content="Chengze Li – University of Illinois Chicago">
+  <meta property="og:description" content="PhD student in Computer Science, University of Illinois Chicago. Former Columbia Master of Science. Research: Artificial Intelligence for medical imaging & LLMs.">
   <meta property="og:url"         content="https://cl4460.github.io/">
   <meta property="og:image"       content="https://cl4460.github.io/images/profile.jpg">
 
