--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <section id="news">
           <h2>News</h2>
           <ul>
-            <li>2025.10 - Invited as the Program Committee member for <a href="https://www2026.thewebconf.org/" target="_blank">WWWW 2026</a>.</li>
+            <li>2025.10 — Invited as the Program Committee member for <a href="https://www2026.thewebconf.org/" target="_blank">WWW 2026</a>.</li>
             <li>2025.06 — Co-authored <a href="https://arxiv.org/pdf/2504.11544" target="_blank">"NodeRAG: Structuring Graph-based RAG with Heterogeneous Nodes"</a> with Tianyang Xu, under review at AAAI 2025.</li>
             <li>2025.04 — Admitted as a first-year Ph.D. student under the guidance of Prof. Philip Yu at the University of Illinois at Chicago, concentrating on multimodal AI systems for medical applications.</li>
             <li>2025.03 —Serving as Research Scientist at <a href="https://www.manteiamedical.com/" target="_blank">Manteia Technologies Co., Ltd.</a> in Milwaukee, WI, I applied AI and machine-learning methods to innovate at the intersection of radiation oncology and computational intelligence, with a focus on clinical decision support.</li>
